# production_ready_py

./: .editorconfig  pyproject.toml  setup  setup.py
.github/workflows/: pypi.yml  python.yml
production_ready/: __init__.py  app.py
tests/: conftest.py  test_app.py
